src/htmlCSS/HtmlParser.java
// Generated from C:/HTMLCSSJINJA2FLASK/compilerproject-main/src/htmlCSS/HtmlParser.g4 by ANTLR 4.13.2
package htmlCSS;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class HtmlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DTD=1, HTML_COMMENT=2, OPEN_STYLE=3, JINJA_VAR_OPEN=4, JINJA_TAG_OPEN=5, 
		SEA_WS=6, TAG_OPEN=7, TAG_CLOSE_IDENT=8, HTML_TEXT=9, TAG_CLOSE=10, TAG_SLASH_CLOSE=11, 
		TAG_EQUALS=12, CLOSING_TAG_NAME=13, TAG_NAME=14, TAG_SLASH=15, TAG_WS=16, 
		HTML_ID=17, HTML_STRING=18, ATTR_JINJA=19, ATTR_STRING_SGL=20, ATTR_DBL_QUOTE_OPEN=21, 
		ATTR_WS=22, ATTR_DQ_JINJA_OPEN=23, ATTR_DQ_TEXT=24, ATTR_DQ_END=25, STYLE_CLOSE=26, 
		CSS_COLON=27, CSS_SEMICOLON=28, CSS_LBRACE=29, CSS_RBRACE=30, CSS_DOT=31, 
		CSS_HASH=32, CSS_LPAREN=33, CSS_RPAREN=34, CSS_COMMA=35, CSS_NUMBER=36, 
		CSS_UNIT=37, CSS_COLOR=38, CSS_KEYWORD=39, CSS_IDENTIFIER=40, CSS_WS=41, 
		J_COMMENT=42, JINJA_VAR_CLOSE=43, JINJA_TAG_CLOSE=44, J_IF=45, J_ELSE=46, 
		J_FOR=47, J_IN=48, J_ENDIF=49, J_ENDFOR=50, J_SET=51, J_ELIF=52, J_LINE=53, 
		J_DOT=54, J_LPAREN=55, J_RPAREN=56, J_LBRACK=57, J_RBRACK=58, J_COMMA=59, 
		J_ASSIGN=60, J_COLON=61, J_IDENT=62, J_STRING=63, J_NUMBER=64, J_WS=65;
	public static final int
		RULE_htmlDocument = 0, RULE_htmlElement = 1, RULE_tagOpen = 2, RULE_tagClose = 3, 
		RULE_self_closing_tag = 4, RULE_htmlAttribute = 5, RULE_attrValue = 6, 
		RULE_attrValuePart = 7, RULE_htmlContent = 8, RULE_cssContent = 9, RULE_cssRule = 10, 
		RULE_cssSelector = 11, RULE_cssDeclaration = 12, RULE_cssValue = 13, RULE_jinjaVariable = 14, 
		RULE_jinjaExpr = 15, RULE_jinjaFilter = 16, RULE_jinjaArgument = 17, RULE_jinjaKeywordArgument = 18, 
		RULE_jinjaArgs = 19, RULE_jinjaAtom = 20, RULE_jinjaTag = 21, RULE_jinjaStatement = 22, 
		RULE_jinjaFor = 23, RULE_loopVariables = 24, RULE_jinjaEndFor = 25, RULE_jinjaIfBlock = 26, 
		RULE_jinjaIf = 27, RULE_jinjaEndIf = 28, RULE_jinjaElse = 29, RULE_jinjaElif = 30, 
		RULE_jinjaForBlock = 31, RULE_jinjaContent = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"htmlDocument", "htmlElement", "tagOpen", "tagClose", "self_closing_tag", 
			"htmlAttribute", "attrValue", "attrValuePart", "htmlContent", "cssContent", 
			"cssRule", "cssSelector", "cssDeclaration", "cssValue", "jinjaVariable", 
			"jinjaExpr", "jinjaFilter", "jinjaArgument", "jinjaKeywordArgument", 
			"jinjaArgs", "jinjaAtom", "jinjaTag", "jinjaStatement", "jinjaFor", "loopVariables", 
			"jinjaEndFor", "jinjaIfBlock", "jinjaIf", "jinjaEndIf", "jinjaElse", 
			"jinjaElif", "jinjaForBlock", "jinjaContent"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'<style>'", null, "'{%'", null, "'<'", null, null, 
			"'>'", "'/>'", null, null, null, "'/'", null, null, null, null, null, 
			null, null, null, null, null, "'</style>'", null, "';'", "'{'", "'}'", 
			null, "'#'", null, null, null, null, null, null, null, null, null, null, 
			"'}}'", "'%}'", "'if'", "'else'", "'for'", "'in'", "'endif'", "'endfor'", 
			"'set'", "'elif'", "'|'", null, null, null, "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DTD", "HTML_COMMENT", "OPEN_STYLE", "JINJA_VAR_OPEN", "JINJA_TAG_OPEN", 
			"SEA_WS", "TAG_OPEN", "TAG_CLOSE_IDENT", "HTML_TEXT", "TAG_CLOSE", "TAG_SLASH_CLOSE", 
			"TAG_EQUALS", "CLOSING_TAG_NAME", "TAG_NAME", "TAG_SLASH", "TAG_WS", 
			"HTML_ID", "HTML_STRING", "ATTR_JINJA", "ATTR_STRING_SGL", "ATTR_DBL_QUOTE_OPEN", 
			"ATTR_WS", "ATTR_DQ_JINJA_OPEN", "ATTR_DQ_TEXT", "ATTR_DQ_END", "STYLE_CLOSE", 
			"CSS_COLON", "CSS_SEMICOLON", "CSS_LBRACE", "CSS_RBRACE", "CSS_DOT", 
			"CSS_HASH", "CSS_LPAREN", "CSS_RPAREN", "CSS_COMMA", "CSS_NUMBER", "CSS_UNIT", 
			"CSS_COLOR", "CSS_KEYWORD", "CSS_IDENTIFIER", "CSS_WS", "J_COMMENT", 
			"JINJA_VAR_CLOSE", "JINJA_TAG_CLOSE", "J_IF", "J_ELSE", "J_FOR", "J_IN", 
			"J_ENDIF", "J_ENDFOR", "J_SET", "J_ELIF", "J_LINE", "J_DOT", "J_LPAREN", 
			"J_RPAREN", "J_LBRACK", "J_RBRACK", "J_COMMA", "J_ASSIGN", "J_COLON", 
			"J_IDENT", "J_STRING", "J_NUMBER", "J_WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HtmlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HtmlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlDocumentContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HtmlParser.EOF, 0); }
		public TerminalNode DTD() { return getToken(HtmlParser.DTD, 0); }
		public List<HtmlElementContext> htmlElement() {
			return getRuleContexts(HtmlElementContext.class);
		}
		public HtmlElementContext htmlElement(int i) {
			return getRuleContext(HtmlElementContext.class,i);
		}
		public HtmlDocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlDocument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterHtmlDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitHtmlDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitHtmlDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlDocumentContext htmlDocument() throws RecognitionException {
		HtmlDocumentContext _localctx = new HtmlDocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_htmlDocument);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DTD) {
				{
				setState(66);
				match(DTD);
				}
			}

			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TAG_OPEN) {
				{
				{
				setState(69);
				htmlElement();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementContext extends ParserRuleContext {
		public HtmlElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlElement; }
	 
		public HtmlElementContext() { }
		public void copyFrom(HtmlElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PairedTagContext extends HtmlElementContext {
		public TagOpenContext tagOpen() {
			return getRuleContext(TagOpenContext.class,0);
		}
		public TagCloseContext tagClose() {
			return getRuleContext(TagCloseContext.class,0);
		}
		public List<HtmlContentContext> htmlContent() {
			return getRuleContexts(HtmlContentContext.class);
		}
		public HtmlContentContext htmlContent(int i) {
			return getRuleContext(HtmlContentContext.class,i);
		}
		public PairedTagContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterPairedTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitPairedTag(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitPairedTag(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ClosingContext extends HtmlElementContext {
		public Self_closing_tagContext self_closing_tag() {
			return getRuleContext(Self_closing_tagContext.class,0);
		}
		public ClosingContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterClosing(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitClosing(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitClosing(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlElementContext htmlElement() throws RecognitionException {
		HtmlElementContext _localctx = new HtmlElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_htmlElement);
		int _la;
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new PairedTagContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				tagOpen();
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8913592L) != 0)) {
					{
					{
					setState(78);
					htmlContent();
					}
					}
					setState(83);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(84);
				tagClose();
				}
				break;
			case 2:
				_localctx = new ClosingContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				self_closing_tag();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TagOpenContext extends ParserRuleContext {
		public TagOpenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tagOpen; }
	 
		public TagOpenContext() { }
		public void copyFrom(TagOpenContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TagStartContext extends TagOpenContext {
		public TerminalNode TAG_OPEN() { return getToken(HtmlParser.TAG_OPEN, 0); }
		public TerminalNode TAG_NAME() { return getToken(HtmlParser.TAG_NAME, 0); }
		public TerminalNode TAG_CLOSE() { return getToken(HtmlParser.TAG_CLOSE, 0); }
		public TerminalNode TAG_SLASH_CLOSE() { return getToken(HtmlParser.TAG_SLASH_CLOSE, 0); }
		public List<HtmlAttributeContext> htmlAttribute() {
			return getRuleContexts(HtmlAttributeContext.class);
		}
		public HtmlAttributeContext htmlAttribute(int i) {
			return getRuleContext(HtmlAttributeContext.class,i);
		}
		public TagStartContext(TagOpenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterTagStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitTagStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitTagStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TagOpenContext tagOpen() throws RecognitionException {
		TagOpenContext _localctx = new TagOpenContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tagOpen);
		int _la;
		try {
			_localctx = new TagStartContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(TAG_OPEN);
			setState(90);
			match(TAG_NAME);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TAG_NAME) {
				{
				{
				setState(91);
				htmlAttribute();
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			_la = _input.LA(1);
			if ( !(_la==TAG_CLOSE || _la==TAG_SLASH_CLOSE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TagCloseContext extends ParserRuleContext {
		public TagCloseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tagClose; }
	 
		public TagCloseContext() { }
		public void copyFrom(TagCloseContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TagEndContext extends TagCloseContext {
		public TerminalNode TAG_CLOSE_IDENT() { return getToken(HtmlParser.TAG_CLOSE_IDENT, 0); }
		public TagEndContext(TagCloseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterTagEnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitTagEnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitTagEnd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TagCloseContext tagClose() throws RecognitionException {
		TagCloseContext _localctx = new TagCloseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tagClose);
		try {
			_localctx = new TagEndContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(TAG_CLOSE_IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Self_closing_tagContext extends ParserRuleContext {
		public TerminalNode TAG_OPEN() { return getToken(HtmlParser.TAG_OPEN, 0); }
		public TerminalNode CLOSING_TAG_NAME() { return getToken(HtmlParser.CLOSING_TAG_NAME, 0); }
		public TerminalNode TAG_CLOSE() { return getToken(HtmlParser.TAG_CLOSE, 0); }
		public List<HtmlAttributeContext> htmlAttribute() {
			return getRuleContexts(HtmlAttributeContext.class);
		}
		public HtmlAttributeContext htmlAttribute(int i) {
			return getRuleContext(HtmlAttributeContext.class,i);
		}
		public Self_closing_tagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_self_closing_tag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterSelf_closing_tag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitSelf_closing_tag(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitSelf_closing_tag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Self_closing_tagContext self_closing_tag() throws RecognitionException {
		Self_closing_tagContext _localctx = new Self_closing_tagContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_self_closing_tag);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(TAG_OPEN);
			setState(102);
			match(CLOSING_TAG_NAME);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TAG_NAME) {
				{
				{
				setState(103);
				htmlAttribute();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			match(TAG_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlAttributeContext extends ParserRuleContext {
		public HtmlAttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlAttribute; }
	 
		public HtmlAttributeContext() { }
		public void copyFrom(HtmlAttributeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AttrWithValueContext extends HtmlAttributeContext {
		public TerminalNode TAG_NAME() { return getToken(HtmlParser.TAG_NAME, 0); }
		public TerminalNode TAG_EQUALS() { return getToken(HtmlParser.TAG_EQUALS, 0); }
		public AttrValueContext attrValue() {
			return getRuleContext(AttrValueContext.class,0);
		}
		public AttrWithValueContext(HtmlAttributeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterAttrWithValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitAttrWithValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitAttrWithValue(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AttrNameOnlyContext extends HtmlAttributeContext {
		public TerminalNode TAG_NAME() { return getToken(HtmlParser.TAG_NAME, 0); }
		public AttrNameOnlyContext(HtmlAttributeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterAttrNameOnly(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitAttrNameOnly(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitAttrNameOnly(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlAttributeContext htmlAttribute() throws RecognitionException {
		HtmlAttributeContext _localctx = new HtmlAttributeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_htmlAttribute);
		try {
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new AttrNameOnlyContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				match(TAG_NAME);
				}
				break;
			case 2:
				_localctx = new AttrWithValueContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				match(TAG_NAME);
				setState(113);
				match(TAG_EQUALS);
				setState(114);
				attrValue();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
